# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_shared_library("sg_app_risk_detection") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [
    "//third_party/json/include",
    "//third_party/openssl/include",
  ]

  configs =
      [ "${sg_root_dir}/services/risk_classify:security_guard_model_configs" ]

  sources = [ "${sg_root_dir}/services/risk_classify/model_library/app_risk_detection/app_risk_detection_model.cpp" ]
  
  deps = [ "//third_party/openssl:libcrypto_shared" ]
  
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "appverify:libhapverify",
  ]
}

ohos_shared_library("sg_system_risk_detection") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [ "//third_party/json/include" ]

  configs =
      [ "${sg_root_dir}/services/risk_classify:security_guard_model_configs" ]

  sources = [ "${sg_root_dir}/services/risk_classify/model_library/system_risk_detection/system_risk_detection_model.cpp" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

ohos_shared_library("sg_oem_mode_detection") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [ "//third_party/json/include" ]

  configs =
      [ "${sg_root_dir}/services/risk_classify:security_guard_model_configs" ]

  sources = [ "${sg_root_dir}/services/risk_classify/model_library/oem_mode/oem_mode_model.cpp" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
  ]
}

ohos_shared_library("sg_threat_detection") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [ "//third_party/json/include" ]

  configs =
      [ "${sg_root_dir}/services/risk_classify:security_guard_model_configs" ]

  sources = [ "${sg_root_dir}/services/risk_classify/model_library/threat_detection/threat_detection_model.cpp" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "hilog:libhilog",
    "time_service:time_client",
  ]
}

group("security_guard_model") {
  deps = [
    ":sg_app_risk_detection",
    ":sg_system_risk_detection",
    ":sg_oem_mode_detection",
    ":sg_threat_detection",
  ]
}
