# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = [ 
    "acquiredatasubscribemanager_fuzzer:AcquireDataSubscribeManagerFuzzTest" ,
    "database_fuzzer:DatabaseFuzzTest" ,
    "databasehelper_fuzzer:DatabaseHelperFuzzTest" ,
    "databasemanager_fuzzer:DatabaseManagerFuzzTest" ,
    "datacollectmanagercallbackproxy_fuzzer:DataCollectManagerCallbackProxyFuzzTest" ,
    "datacollectmanagerservice_fuzzer:DataCollectManagerServiceFuzzTest" ,
    "securityeventquerycallbackproxy_fuzzer:SecurityEventQueryCallbackProxyFuzzTest",
    "datacollectmanagerserviceclib_fuzzer:DataCollectManagerServiceClibFuzzTest"
  ]
}